--- a/index.html
+++ b/index.html
@@ -9,18 +9,120 @@
     </head>
     <body>
         <aside class="">
-
+            <div class="">
+                <div class="">Lorem</div>
+                <div class="">Lorem</div>
+                <div class="">Lorem</div>
+            </div>
+            <div class="">lorem</div>
         </aside>
         <main>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <div class="container">
+                <i class="fas fa-bars hamb"></i>
+                <div class="menu">
+                    <ul>
+                        <li>In evidenza</li>
+                        <li>Podcast</li>
+                        <li>Classifiche</li>
+                        <li>Generi e mood</li>
+                        <li>Nuove uscite</li>
+                        <li>Scopri</li>
+                    </ul>
+                </div>
+                <p>Creato per te</p>
+                <div class="disc-wrapper">
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                </div>
+                <p>Creato per te</p>
+                <div class="disc-wrapper">
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                </div>
+                <p>Creato per te</p>
+                <div class="disc-wrapper">
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/ultimo.jpg" alt="Ultimo">
+                        <p>Ultimo</p>
+                    </div>
+                </div>
+            <!-- da ripetere la struttura -->
+            </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-left">
+                lorem
+            </div>
+            <div class="footer-center">
+                lorem
+            </div>
+            <div class="footer-right">
+                lorem
+            </div>
+        </footer>
     </body>
 </html>
