--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <aside class="">
-            <div class="">
-                <div class="">Lorem</div>
+        <aside>
+            <div>
+                <div>
+                    <img id="logo-full" src="img/spotify-logo.png" alt="">
+                    <img src="img/spotify-svgrepo-com.svg" alt="">
+                </div>
                 <div class="">Lorem</div>
                 <div class="">Lorem</div>
             </div>
