--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="bottom-aside">
                 <p><i class="far fa-arrow-alt-circle-down"></i><span>Install App</span></p>
                 <hr>
-                <p><i class="far fa-user"></i><span>momoramadori</span></p>
+                <p><i class="far fa-user"></i><span>momo</span></p>
             </div>
         </aside>
         <main>
@@ -74,78 +74,81 @@
                         <p>Guerra e Pace</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>U</p>
+                        <img src="img/marracash.jpg" alt="Persona">
+                        <p>Persona</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img class="img-rounded" src="img/pupo.jpg" alt="Pupo">
+                        <p>Pupo</p>
                     </div>
-                    <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
-                    </div>
+
                     <div class="artist">
                         <img src="img/mahmood-album.jpg" alt="Gioventù bruciata">
                         <p>Gioventù Bruciata</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img class="img-rounded" src="img/nicky.jpg" alt="Nicky Minaj">
+                        <p>Nicky Minaj</p>
+                    </div>
+                    <div class="artist">
+                        <img src="img/new.jpg" alt="Playlist">
+                        <p>New Music Friday</p>
                     </div>
                 </div>
                 <p>Recently played</p>
                 <div class="disc-wrapper">
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img src="img/fabri-album.jpg" alt="Guerra e Pace">
+                        <p>Guerra e Pace</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img src="img/marracash.jpg" alt="Persona">
+                        <p>Persona</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img class="img-rounded" src="img/pupo.jpg" alt="Pupo">
+                        <p>Pupo</p>
+                    </div>
+
+                    <div class="artist">
+                        <img src="img/mahmood-album.jpg" alt="Gioventù bruciata">
+                        <p>Gioventù Bruciata</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img class="img-rounded" src="img/nicky.jpg" alt="Nicky Minaj">
+                        <p>Nicky Minaj</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
-                    </div>
-                    <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img src="img/new.jpg" alt="Playlist">
+                        <p>New Music Friday</p>
                     </div>
                 </div>
                 <p>Playlists</p>
                 <div class="disc-wrapper">
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img src="img/fabri-album.jpg" alt="Guerra e Pace">
+                        <p>Guerra e Pace</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img src="img/marracash.jpg" alt="Persona">
+                        <p>Persona</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img class="img-rounded" src="img/pupo.jpg" alt="Pupo">
+                        <p>Pupo</p>
+                    </div>
+
+                    <div class="artist">
+                        <img src="img/mahmood-album.jpg" alt="Gioventù bruciata">
+                        <p>Gioventù Bruciata</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img class="img-rounded" src="img/nicky.jpg" alt="Nicky Minaj">
+                        <p>Nicky Minaj</p>
                     </div>
                     <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
-                    </div>
-                    <div class="artist">
-                        <img src="img/ultimo.jpg" alt="Ultimo">
-                        <p>Ultimo</p>
+                        <img src="img/new.jpg" alt="Playlist">
+                        <p>New Music Friday</p>
                     </div>
                 </div>
             <!-- da ripetere la struttura -->
