--- a/index.html
+++ b/index.html
@@ -156,13 +156,33 @@
         </main>
         <footer>
             <div class="footer-left">
-                lorem
+                <div>
+                    <img src="img/capa.jpg" alt="caparezza- fuori dal tunnel">
+                </div>
+                <p>Fuori dal Tunnel <br><span>Caparezza</span></p>
+                <i class="far fa-heart"></i>
             </div>
             <div class="footer-center">
-                lorem
+                <div id="fc-top">
+                    <i class="fas fa-random"></i>
+                    <i class="fas fa-step-backward"></i>
+                    <i class="far fa-pause-circle"></i>
+                    <i class="fas fa-step-forward"></i>
+                    <i class="fas fa-history"></i>
+                </div>
+                <div id="fc-bottom">
+                    <div class="linea" id="linea1">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </div>
             </div>
             <div class="footer-right">
-                lorem
+                <i class="fas fa-list-ul"></i>
+                <i class="fas fa-desktop"></i>
+                <i class="fas fa-volume-up"></i>
+                <div class="linea" id="linea2">
+                    <i class="fas fa-circle"></i>
+                </div>
             </div>
         </footer>
     </body>
