Aggiunti hover aside e main

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Spotify</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a41fcd4d62.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -38,20 +38,20 @@
                     <p class="up">Ascoltati di Recente</p>
                     <ul>
                         <li>
-                            <p>iwebiwbc</p>
+                            <p>Marracash</p>
                             <p class="up">Artista</p>
                         </li>
                         <li>
-                            <p>iwebiwbc</p>
-                            <p class="up">Artista</p>
+                            <p>New Music Friday</p>
+                            <p class="up">Playlist</p>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="bottom-aside">
-                <p><i class="far fa-arrow-alt-circle-down"></i><span>Install App</span></p>
+                <p><a href="#"><i class="far fa-arrow-alt-circle-down"></i><span>Install App</span></a></p>
                 <hr>
-                <p><i class="far fa-user"></i><span>momo</span></p>
+                <p><a href="#"><i class="far fa-user"></i><span>momo</span></a></p>
             </div>
         </aside>
         <main>
@@ -151,7 +151,6 @@
                         <p>New Music Friday</p>
                     </div>
                 </div>
-            <!-- da ripetere la struttura -->
             </div>
         </main>
         <footer>
