--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             </div>
             <div class="footer-center">
                 <div id="fc-top">
-                    <i class="fas fa-random"></i>
-                    <i class="fas fa-step-backward"></i>
-                    <i class="far fa-pause-circle"></i>
-                    <i class="fas fa-step-forward"></i>
-                    <i class="fas fa-history"></i>
+                    <a href="#"><i class="fas fa-random"></i></a>
+                    <a href="#"><i class="fas fa-step-backward"></i></a>
+                    <a href="#"><i class="far fa-pause-circle"></i></a>
+                    <a href="#"><i class="fas fa-step-forward"></i></a>
+                    <a href="#"><i class="fas fa-history"></i></a>
                 </div>
                 <div id="fc-bottom">
                     <div class="linea" id="linea1">
@@ -176,9 +176,9 @@
                 </div>
             </div>
             <div class="footer-right">
-                <i class="fas fa-list-ul"></i>
-                <i class="fas fa-desktop"></i>
-                <i class="fas fa-volume-up"></i>
+                <a href="#"><i class="fas fa-list-ul"></i></a>
+                <a href="#"><i class="fas fa-desktop"></i></a>
+                <a href="#"><i class="fas fa-volume-up"></i></a>
                 <div class="linea" id="linea2">
                     <i class="fas fa-circle"></i>
                 </div>
