--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- Aside Section -->
         <aside>
             <div>
                 <div class="top-aside">
                     <img id="logo-full" src="img/spotify-logo.png" alt="logo">
                     <img id="icon" src="img/spoty-icon.png" alt="icon">
                 </div>
-                <div class="search-bar top-aside">
+                <div class="top-aside">
                     <ul>
                         <li>
                             <a href="#"><i class="fas fa-search"></i>
@@ -34,7 +35,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="recent">
+                <div id="recent-list">
                     <p class="up">Ascoltati di Recente</p>
                     <ul>
                         <li>
@@ -49,11 +50,20 @@
                 </div>
             </div>
             <div class="bottom-aside">
-                <p><a href="#"><i class="far fa-arrow-alt-circle-down"></i><span>Install App</span></a></p>
+                <p>
+                    <a href="#"><i class="far fa-arrow-alt-circle-down"></i>
+                        <span>Install App</span>
+                    </a>
+                </p>
                 <hr>
-                <p><a href="#"><i class="far fa-user"></i><span>momo</span></a></p>
+                <p>
+                    <a href="#"><i class="far fa-user"></i>
+                        <span>Momo</span>
+                    </a>
+                </p>
             </div>
         </aside>
+        <!-- Main Section -->
         <main>
             <div class="container">
                 <i class="fas fa-bars hamb"></i>
@@ -158,7 +168,10 @@
                 <div>
                     <img src="img/capa.jpg" alt="caparezza- fuori dal tunnel">
                 </div>
-                <p>Fuori dal Tunnel <br><span>Caparezza</span></p>
+                <p>Fuori dal Tunnel
+                    <br>
+                    <span>Caparezza</span>
+                </p>
                 <i class="far fa-heart"></i>
             </div>
             <div class="footer-center">
